# VeriBiota

./: .dockerignore  .gitignore  Agentfile.md  Biosim.lean  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Main.lean  Makefile  README.md  SECURITY.md  lake-manifest.json  lakefile.lean  lean-doc  mkdocs.yml  package-lock.json  package.json  veribiota
.agent/: state.json
.agent/notes/: sw_kernel_impl.md  sw_profile_opt.md  sw_report.md  sw_unit_tests.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: validate_snapshots.py
.github/workflows/: ci.yml  codeql.yml  container.yml  docs.yml  lean-check.yml  release.yml  scorecard.yml  tier0_snapshots.yml
Biosim/CLI/: Profile.lean  Verify.lean
Biosim/Core/: Reaction.lean  Species.lean  State.lean  Stoich.lean  System.lean
Biosim/Engine/: Checks.lean
Biosim/Examples/: BirthDeath.lean  CertificateDemo.lean  GRN.lean  InvariantDemo.lean  SIR.lean
Biosim/IO/: Base64Url.lean  Certificate.lean  Checks.lean  Importer.lean  Jwks.lean  Model.lean  Shared.lean
Biosim/Proofs/: Invariants.lean  Positivity.lean
Biosim/SSA/: Gillespie.lean
Biosim/Semantics/: Discrete.lean  ODE.lean
Biosim/Tactics/: Invariant.lean
Biosim/VeriBiota/: EditDAG.lean  Theorems.lean
Tests/: Main.lean  Sanity.lean
Tests/golden/: checks_min.json
adapters/: README.md
adapters/cpp/: CMakeLists.txt  main.cpp
adapters/python/: demo.py  veribiota_adapter.py
adapters/rust/: Cargo.toml
artifacts/certificates/: sir-demo.json  sir-demo.json.sha256
artifacts/checks/: sir-demo.json  sir-demo.json.sha256
artifacts/models/: sir-demo.json  sir-demo.json.sha256
docs/: ATTESTED_PROFILES.md  CI_ADOPTION_KIT.md  FAILURE_MODES.md  HELIX_VERIFICATION.md  INTEGRATION.md  PROFILE_SPEC.md  QUICKSTART.md  SNAPSHOTS.md  TIER0_COMPLIANCE.md  VCF_NORMALIZATION.md  canonicalization.md  cli.md  code_scanning.md  examples.md  getting-started.md  index.md  invariants.md  model-ir.md  qa_checklist.md  roadmap.md  runtime_checks.md  simulator-integration.md  verification-workflow.md
docs/releases/: v0.2.1.md
docs/spec/: VERIBIOTA-0001-runtime-checks.md  VERIBIOTA-0002-veribundle-spec.md
docs/styles/: brand.css
engine/biosim-checks/: Cargo.toml
engine/biosim-checks/ffi/: lib.c  veribiota_checks.h
engine/biosim-checks/src/: lib.rs
examples/: checks.mass.json  species.example.json  trajectory.sample.jsonl
examples/veribiota-example-pipeline/: README.md
examples/veribiota-example-project/: README.md
examples/veribiota-minimal/: README.md
examples/veribundle/: minimal_v0_1.json
profiles/: manifest.json
python/veribiota/: __init__.py  profile.py  veribundle.py
python/veribiota_py/: __init__.py  core.py
releases/pilot-demo-v1/: Makefile  README_pilot.md  jwks.sample.json
schema/: README.md  biolean.checks.v1.json  veribiota.certificate.v1.json
schemas/: task.schema.json
schemas/align/: global_affine_v1.schema.json
schemas/crispr/: offtarget_score_sanity_v1.schema.json
schemas/edit/: edit_script_normal_form_v1.schema.json  edit_script_v1.schema.json
schemas/hmm/: pair_hmm_bridge_v1.schema.json
scripts/: check_alignment.sh  dev_jwks.sh  minisign_sidecar.sh  schemaValidate.mjs  sign_key_path.sh  sign_preflight.sh  validateTasks.mjs  veribiota_integration.py
security/: jwks.json  jwks.sample.json  veribiota_pub_spki.der
tasks/: biosim_certificate_pipeline.task.md  biosim_cli_docs.task.md  biosim_core_invariants.task.md  biosim_model_ir.task.md
(+54 files in other folders)
