[package]
name = "biosim-checks"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "1", features = ["std"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.7"

[[bin]]
name = "biosim-eval"
path = "src/bin/eval.rs"
